--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ferrugemjs-node",
-  "version": "0.18.0",
+  "version": "0.19.0",
   "description": "a node package to convert html template to Incremental DOM",
   "main": "index.js",
   "scripts": {
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "domhandler": "^2.3.0",
-    "htmlparser2": "^3.9.2"
+    "htmlparser2": "^3.9.2",
+    "nanoid": "^0.2.0"
   }
 }
