--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ferrugemjs-node",
-  "version": "0.29.0",
+  "version": "0.31.0",
   "description": "a node package to convert html template to Incremental DOM",
   "main": "index.js",
+  "bin" : { "ferrugemjs-node-cli" : "./cli/index.js" },
   "scripts": {
     "watch": "nodemon -w test/ -w parse/ test/test.js"
   },
