--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ferrugemjs-node",
-  "version": "0.31.3",
+  "version": "0.31.4",
   "description": "a node package to convert html template to Incremental DOM",
   "main": "index.js",
   "bin" : { "ferrugemjs-node-cli" : "cli/index.js" },
@@ -13,7 +13,8 @@
   },
   "files": [
     "index.js",
-    "parse/parse.js"
+    "parse/parse.js",
+    "cli/index.js"
   ],
   "keywords": [
     "IDOM",
