--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "domhandler": "5.0.3",
     "htmlparser2": "8.0.1",
-    "nanoid": "4.0.1"
+    "uuid": "9.0.0"
   },
   "directories": {
     "test": "test"
